Add show cluster.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,6 +25,9 @@
       $("#add_cluster").click(function() {
         window.location.href="add_cluster";
         });
+      $("#show_cluster").click(function() {
+        window.location.href="show_cluster";
+        });
       });
 </script>
 
@@ -64,7 +67,7 @@
         <div id="collapse1" class="panel-collapse collapse">
           <ul class="list-group">
             <li id="add_cluster"class="list-group-item">&nbsp;&nbsp;&nbsp;新增集群</li>
-            <li class="list-group-item">&nbsp;&nbsp;&nbsp;查看集群</li>
+            <li id="show_cluster" class="list-group-item">&nbsp;&nbsp;&nbsp;查看集群</li>
           </ul>
         </div>
         <li id="sql"><a href="#">SQL命令台</a></li>
