--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,32 +5,13 @@
 {% block head %}
 {{ super() }}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dashboard.css') }}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='app.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='font-awesome.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 <script src="{{ url_for('static', filename='jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
-<script src="{{ url_for('static', filename='ace.js') }}"></script>
-<script src="{{ url_for('static', filename='ace-pgsql.js') }}"></script>
 <script src="{{ url_for('static', filename='bootstrap-contextmenu.js') }}"></script>
-<script src="{{ url_for('static', filename='app.js') }}"></script>
-<script>
-  $(document).ready(function(){
-      $("li").click(function() {
-        $("li").removeClass("active");
-        $(this).addClass("active");
-        });
-      $("#sql").click(function() {
-        window.location.href="sql";
-        });
-      $("#add_cluster").click(function() {
-        window.location.href="add_cluster";
-        });
-      $("#show_cluster").click(function() {
-        window.location.href="show_cluster";
-        });
-      });
-</script>
-
+<script src="{{ url_for('static', filename='common.js') }}"></script>
+<script src="{{ url_for('static', filename='index.js') }}"></script>
 {% endblock %}
 
 {% block body %}
