--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,6 @@
 {{ super() }}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dashboard.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='font-awesome.css') }}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 <script src="{{ url_for('static', filename='jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
 <script src="{{ url_for('static', filename='bootstrap-contextmenu.js') }}"></script>
@@ -55,7 +54,7 @@
         <li id="coll2"><a data-toggle="collapse" href="#collapse2">集群监控</a></li>
         <div id="collapse2" class="panel-collapse collapse">
           <ul class="list-group">
-            <li class="list-group-item">&nbsp;&nbsp;&nbsp;集群拓扑</li>
+            <li id="show_topo" class="list-group-item">&nbsp;&nbsp;&nbsp;集群拓扑</li>
             <li class="list-group-item">&nbsp;&nbsp;&nbsp;慢日志</li>
             <li class="list-group-item">&nbsp;&nbsp;&nbsp;错误日志</li>
           </ul>
