--- a/app/templates/sql.html
+++ b/app/templates/sql.html
@@ -1,40 +1,29 @@
-{% extends "index.html" %}
-
-{% block head %}
-{{ super() }}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='sql.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap-select.min.css') }}">
 <script src="{{ url_for('static', filename='ace.js') }}"></script>
 <script src="{{ url_for('static', filename='mode-mysql.js') }}"></script>
 <script src="{{ url_for('static', filename='bootstrap-select.min.js') }}"></script>
 <script src="{{ url_for('static', filename='sql.js') }}"></script>
-{% endblock head %}
 
-{% block tab %}
-<div id="body" >
-  <div>
-    <select id="cluster_id" class="selectpicker">
-      <option value="">选择集群</option>
-      {% for cluster in clusters %}
-      <option value="{{cluster.id}}">{{cluster.name}}</option>
-      {% endfor %}
-    </select>
-  </div>
+<select id="cluster_id" class="selectpicker">
+  <option value="">选择集群</option>
+  {% for cluster in clusters %}
+  <option value="{{cluster.id}}">{{cluster.name}}</option>
+  {% endfor %}
+</select>
 
-  <div id="input">
-    <div class="wrapper">
-      <div id="custom_query"></div>
-      <div class="actions">
-        <input type="button" id="run" value="Run Query" class="btn btn-sm btn-primary" />
-        <div id="query_progress">Please wait, query is executing...</div>
-      </div>
-    </div>
-  </div>
-
-  <div id="output">
-    <div class="wrapper">
-      <table id="results" class="table"></table>
+<div id="input">
+  <div class="wrapper">
+    <div id="custom_query"></div>
+    <div class="actions">
+      <input type="button" id="run" value="Run Query" class="btn btn-sm btn-primary" />
+      <div id="query_progress">Please wait, query is executing...</div>
     </div>
   </div>
 </div>
-{% endblock tab %}
+
+<div id="output1">
+  <div class="wrapper2">
+    <table id="results" class="table"></table>
+  </div>
+</div>
