--- a/app/static/dashboard.css
+++ b/app/static/dashboard.css
@@ -104,11 +104,6 @@ body {
   border-radius: 50%;
 }
 
-#body {
-  position: fixed;
-  top: 50px;
-  left: 250px;
-  bottom: 0px;
-  right: 0px;
-  overflow: auto;
+#tab {
+  display: inline-block;
 }
