--- a/app/templates/add_cluster.html
+++ b/app/templates/add_cluster.html
@@ -1,39 +1,27 @@
-{% extends "index.html" %}
-
-{% block head %}
-{{ super() }}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap-dialog.min.css') }}">
+<script src="{{ url_for('static', filename='bootstrap-dialog.min.js') }}"></script>
 <script src="{{ url_for('static', filename='add_cluster.js') }}"></script>
-{% endblock head %}
-
-{% block tab %}
-<div id="body" class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
-
-<form id="add">
-  <div class="form-group">
+<form id="add" >
+  <div >
     <label for="cluster_name">集群名称</label>
-    <input type="text" name="name" class="form-control" id="cluster_name" placeholder="Cluster Name" required>
+    <input type="text" name="name" class="form-control" id="cluster_name" placeholder="Cluster Name" required />
   </div>
   <div class="form-group">
     <label for="cluster_ip">DBScale主机IP</label>
-    <input type="text" name="ip" class="form-control" id="cluster_ip" placeholder="DBScale IP" required>
+    <input type="text" name="ip" class="form-control" id="cluster_ip" placeholder="DBScale IP" required />
   </div>
   <div class="form-group">
     <label for="cluster_port">DBScale主机端口</label>
-    <input type="text" name="port" class="form-control" id="cluster_port" placeholder="DBScale Port" required>
+    <input type="text" name="port" class="form-control" id="cluster_port" placeholder="DBScale Port" required />
   </div>
   <div class="form-group">
     <label for="cluster_port">DBScale用户名</label>
-    <input type="text" name="username" class="form-control" id="cluster_username" placeholder="DBScale Username" required>
+    <input type="text" name="username" class="form-control" id="cluster_username" placeholder="DBScale Username" required />
   </div>
   <div class="form-group">
     <label for="cluster_port">DBScale密码</label>
-    <input type="password" name="password" class="form-control" id="cluster_username" placeholder="DBScale Password" required>
+    <input type="password" name="password" class="form-control" id="cluster_username" placeholder="DBScale Password" required />
   </div>
   <button id='submit' type="button" class="btn btn-primary">Submit</button>
 </form>
-<div id='add_success' class="alert alert-success">
-  <strong>Success!</strong>
 </div>
-</div>
-
-{% endblock tab%}
