--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,9 @@
 
 {% block head %}
 {{ super() }}
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dashboard.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='font-awesome.css') }}">
 <script src="{{ url_for('static', filename='jquery.min.js') }}"></script>
@@ -32,9 +35,6 @@
         <li><a href="#">Profile</a></li>
         <li><a href="#">Help</a></li>
       </ul>
-      <form class="navbar-form navbar-right">
-        <input type="text" class="form-control" placeholder="Search...">
-      </form>
     </div>
   </div>
 </nav>
@@ -51,7 +51,7 @@
           </ul>
         </div>
         <li id="sql"><a href="#">SQL命令台</a></li>
-        <li id="coll2"><a data-toggle="collapse" href="#collapse2">集群监控</a></li>
+        <li id="monitor"><a data-toggle="collapse" href="#collapse2">集群监控</a></li>
         <div id="collapse2" class="panel-collapse collapse">
           <ul class="list-group">
             <li id="show_topo" class="list-group-item">&nbsp;&nbsp;&nbsp;集群拓扑</li>
@@ -61,7 +61,8 @@
         </div>
       </ul>
     </div>
-    {% block tab %} {% endblock tab %}
+    <div id="tab" class="col-sm-8 col-sm-offset-3 col-md-9 col-md-offset-2 main">
+    </div>
   </div>
 </div>
 {% endblock body %}
