modify nav click active

--- a/app/templates/add_cluster.html
+++ b/app/templates/add_cluster.html
@@ -20,7 +20,7 @@
   </div>
   <div class="form-group">
     <label for="cluster_port">DBScale密码</label>
-    <input type="password" name="password" class="form-control" id="cluster_username" placeholder="DBScale Password" required />
+    <input type="password" name="password" class="form-control" id="cluster_username" placeholder="DBScale Password" />
   </div>
   <button id='submit' type="button" class="btn btn-primary">Submit</button>
 </form>
