--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,10 +31,7 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Help</a></li>
+        <li><a href="/auth/logout">Logout</a></li>
       </ul>
     </div>
   </div>
@@ -44,7 +41,7 @@
   <div class="row">
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
-        <li id="coll1"><a data-toggle="collapse" href="#collapse1">集群管理<span class="sr-only">(current)</span></a></li>
+        <li id="manager"><a data-toggle="collapse" href="#collapse1">集群管理<span class="sr-only">(current)</span></a></li>
         <div id="collapse1" class="panel-collapse collapse">
           <ul class="list-group">
             <li id="add_cluster"class="list-group-item">&nbsp;&nbsp;&nbsp;新增集群</li>
